# pythonProject3

Diploma2/: .dockerignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
Diploma2/.github/workflows/: biuld_and_push.yaml
Diploma2/bot/: admin.py  models.py  serializers.py  urls.py  views.py
Diploma2/bot/management/commands/: runbot.py
Diploma2/bot/migrations/: 0001_initial.py
Diploma2/bot/tg/: client.py  schemas.py
Diploma2/core/: admin.py  models.py  serializers.py  urls.py  views.py
Diploma2/core/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_first_name_and_more.py  0003_alter_user_options.py
Diploma2/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py
Diploma2/goals/migrations/: 0001_initial.py  0002_board_goalcategory_board_boardparticipant.py  0003_create_new_objects.py  0004_alter_goalcategory_board.py
Diploma2/goals/views/: boards.py  goal_category_views.py  goal_comment_views.py  goal_views.py
Diploma2/todolist/: settings.py  urls.py
